# CppTemplate

./: CMakeLists.txt  NewCppProject  README.md  install.sh
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  CMakeLists.txt.in
